Update custom checkbox in mult selection

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --ppColor: "#0e2a4d";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,7 +18,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: ppColor;
 }
 
 @layer utilities {
@@ -25,3 +26,4 @@ body {
     text-wrap: balance;
   }
 }
+
